tests/relatorio_execucoes.txt
RELATÓRIO CONCATENADO DE EXECUÇÕES NO SPIM
Data: Dom  7 Dez 2025 20:11:05 -03
============================================================

############################################################
EXECUÇÃO: expressao1Correto.asm
############################################################

Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
50Memory address out of bounds


############################################################
EXECUÇÃO: fatorialCorreto.asm
############################################################

Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
spim: (parser) syntax error on line 3 of file assembly_files/fatorialCorreto.asm
	  .asciiz "" e: ""
	             ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main


############################################################
EXECUÇÃO: FibEfatCorreto.asm
############################################################

Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
spim: (parser) syntax error on line 3 of file assembly_files/FibEfatCorreto.asm
	  .asciiz ""A subtracao do valor do fatorial pelo valor de finbonacci e: ""
	            ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main


############################################################
EXECUÇÃO: FibEfatCorretoVersao2.asm
############################################################

Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
spim: (parser) syntax error on line 3 of file assembly_files/FibEfatCorretoVersao2.asm
	  .asciiz ""A subtracao do valor do fatorial pelo valor de finbonacci e: ""
	            ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main


############################################################
EXECUÇÃO: NotaEmConceito.asm
############################################################

Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
spim: (parser) syntax error on line 3 of file assembly_files/NotaEmConceito.asm
	  .asciiz ""Conceito: ""
	            ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main


############################################################
EXECUÇÃO: SeqOrdenada.asm
############################################################

Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
spim: (parser) syntax error on line 3 of file assembly_files/SeqOrdenada.asm
	  .asciiz ""DESORDENADA""
	            ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main


############################################################
EXECUÇÃO: variaveisGlobaisVariaveisFuncoesCorreto.asm
############################################################

Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
1

